Atualização do layout

--- a/brasil.html
+++ b/brasil.html
@@ -152,11 +152,19 @@
 
         </div>
 
-
-
+        <div class="clear"></div>
 
 
     </div> <!--Fechamento principal-->
+
+    <div id="container-rodape">
+
+        <div id="rodape">
+            &copy; Copyright 2000-2018 Notícias cidade
+        </div>
+
+
+    </div>
 
 </body>
 
