--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                         <div class="resumo-img-tres-colunas">
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>A nova legislação trouxe mudanças em diversos setores. Especialistas destacaram a importância de se <br>adaptar e garantir a conformidade. A abordagem proativa foi enfatiza- <br>da diante das mudanças legislati-<br>vas.</p>
 
                         </div>
 
@@ -73,40 +73,41 @@
 
                 <div class="caixa">
 
-                    <h3>Mundo</h3>
+                    <h3>Tecnologia</h3>
 
                     <div class="caixa-conteudo">
 
                         <ul id="mundo">
                             <li><a href="#">
-                                    <img src="./imagens/tecnologia.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    <img src="./imagens/realidade-aumentada.jpg">
+                                    <h5>Realidade Aumentada</h5>
+                                    <p>Descubra como a reali-<br>dade aumentada revolu-<br>ciona a interação com produtos, oferecendo experiências únicas</p>
+                                </a>
+       
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    <img src="./imagens/robotica2.jpg">
+                                    <h5>Robótica Colaborativa</h5>
+                                    <p>Explore inovações em ro-<br>bótica colaborativa para uma nova era de trabalho com humanos e robôs em harmonia</p>
+                                </a>
+
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    <img src="./imagens/inteligencia-artificial.jpg">
+                                    <h5>Inteligência Artificial</h5>
+                                    <p>Descubra como a inteli-<br>gência artificial impul-<br>siona a inovação e abre portas para um futuro promissor.</p>
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#">
-                                    <img src="./imagens/tecnologia.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                </a>
-
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    <img src="./imagens/tecnologia.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="#">
-                                    <img src="./imagens/tecnologia.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    <img src="./imagens/telemedicina.jpg">
+                                    <h5>Saúde 4.0</h5>
+                                    <p>Explore as tecnologias que estão transformando a medicina, como tele-<br>medicina, diagnósticos por IA.</p>
                                 </a>
                             </li>
                         </ul>
@@ -135,11 +136,12 @@
                         <img class="img-tres-colunas" src="./imagens/doutor.jpg">
 
                         <div class="resumo-img-tres-colunas">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p>Tenha acesso exclusivo à mente<br> brilhante do Dr. Felipe Silva, en- <br>quanto ele desvenda os segredos<Br> da saúde ideal e revela práticas <br>revolucionárias para uma vida<br> equilibrada e feliz
+                            </p>
                         </div>
 
                         <div class="link-img-tres-colunas">
-                            <a href="#">Leia mais!</a>
+                            <a class="doutor" href="#">Leia mais!</a>
                         </div>
 
                     </div>
@@ -157,29 +159,30 @@
                             <li>
                                 <a href="#">
                                     <img src="./imagens/cidade.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    <h5>Cultura Exótica</h5>
+                                    <p>Conheça a cultura e paisagens exóticas do Sudeste Asiático em uma viagem verdadeiramente inesquecível.</p>
                                 </a>
+
                             </li>
                             <li>
                                 <a href="#">
                                     <img src="./imagens/taxi.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    <h5>Natureza em Cores</h5>
+                                    <p>Explore a fauna e flora da América Latina, da Amazônia aos Andes, em uma jornada pelos tesou-<br>ros naturais da região</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <img src="./imagens/tecnologia.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    <h5>Crise Global</h5>
+                                    <p>Acompanhe as tensões entre nações e os esfor-<br>ços diplomáticos para alcançar soluções diante de uma crise global</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <img src="./imagens/doutor.jpg">
-                                    <h5>NOVAS TECNOLOGIAS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    <h5>Mudança Climática</h5>
+                                    <p>Explore os impactos da mudança climática em todo o mundo e descubra as soluções inovadoras adotadas por governos.</p>
                                 </a>
                             </li>
                         </ul>
@@ -236,12 +239,22 @@
             </div>
 
 
+            <div class="clear"></div>
 
         </div>
 
-
-
     </div> <!--Fechamento principal-->
+
+    <div id="container-rodape">
+
+        <div id="rodape">
+
+            &copy; Copyright 2000-2018 Notícias cidade 
+
+        </div>
+
+    </div>
+
 
 </body>
 
