--- a/fotos.html
+++ b/fotos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="fotos">
+<body id="uma-coluna" class="fotos">
 
     <div id="principal">
 
@@ -39,13 +39,95 @@
 
 
 
-        </div> <!--Fechamento togo-->
+        </div> <!--Fechamento topo-->
+
+
+        <div id="conteudo">
+
+            <div id="primario">
+
+                <div class="caixa">
+
+                    <h3>Destaque</h3>
+
+                    <div class="caixa-conteudo">
+
+                        <h2>NOVA LEGISLAÇÃO</h2>
+
+                        <img class="img-duas-colunas" src="./imagens/taxi.jpg" alt="">
+
+                        <div class="resumo-img-duas-colunas">
+                            <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                        </div>
+
+                        <div class="link-img-duas-colunas">
+                            <a href="#">Leia mais!</a>
+                        </div>
 
 
 
+                    </div>
+
+                </div>
+
+                <div class="caixa">
+
+                    <h3>Mundo</h3>
+
+                    <div class="caixa-conteudo">
+
+                        <ul id="mundo">
+                            <li>
+                                <a href="#">
+                                    <img class="img-mundo-duas-colunas" src="./imagens/tecnologia.jpg">
+                                    <h5>NOVAS TECNOLOGIAS</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img class="img-mundo-duas-colunas" src="./imagens/tecnologia.jpg">
+                                    <h5>NOVAS TECNOLOGIAS</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img class="img-mundo-duas-colunas" src="./imagens/tecnologia.jpg">
+                                    <h5>NOVAS TECNOLOGIAS</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img class="img-mundo-duas-colunas" src="./imagens/tecnologia.jpg">
+                                    <h5>NOVAS TECNOLOGIAS</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                </div>
 
 
-    </div> <!--Fechamento principal-->
+            </div> <!--Fechamento primario-->
+
+            <div class="clear"></div>
+
+
+        </div> <!--Fechamento conteudo-->
+
+    </div>
+
+    <div id="container-rodape">
+
+        <div id="rodape">
+            &copy; Copyright 2000-2018 Notícias cidade
+        </div>
+
+    </div>
 
 </body>
 
