Atualização do layout

--- a/index.html
+++ b/index.html
@@ -225,9 +225,13 @@
 
                     <div class="caixa-conteudo">
 
+                        <form>
+
                         <label for="email">Email</label>
                         <input type="text" name="email" id="email" placeholder="Digite seu E-mail">
-                        <input type="submit" name="email" value="Cadastrar" id="submit">
+                        <input class="submit" value="Cadastrar" type="submit">
+
+                    </form>
 
                     </div>
 
