Atualização de font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <title>Notícias Cidade</title>
     <link rel="stylesheet" href="style.css">
+
+
+    <style>
+
+    @import url('https://fonts.googleapis.com/css2?family=Lato&family=Mukta:wght@500&family=Raleway:wght@200&family=Roboto+Slab:wght@300&family=Victor+Mono:wght@100&display=swap');
+
+    </style>
+
 </head>
 
 <body class="home">
@@ -57,7 +65,7 @@
 
                         <div class="resumo-img-tres-colunas">
 
-                            <p>A nova legislação trouxe mudanças em diversos setores. Especialistas destacaram a importância de se <br>adaptar e garantir a conformidade. A abordagem proativa foi enfatiza- <br>da diante das mudanças legislati-<br>vas.</p>
+                            <p>A nova legislação trouxe mudanças em diversos setores.<br> Especialistas destacaram a importância de se adaptar e<br> garantir a conformidade. A abordagem proativa foi enfa-<br>tizada diante das mudanças legislativas.</p>
 
                         </div>
 
@@ -77,11 +85,11 @@
 
                     <div class="caixa-conteudo">
 
-                        <ul id="mundo">
+                        <ul id="mundo" class="tecnologia">
                             <li><a href="#">
                                     <img src="./imagens/realidade-aumentada.jpg">
                                     <h5>Realidade Aumentada</h5>
-                                    <p>Descubra como a reali-<br>dade aumentada revolu-<br>ciona a interação com produtos, oferecendo experiências únicas</p>
+                                    <p>Descubra como a realidade aumentada revoluciona a interação com produtos, oferecendo experiências únicas</p>
                                 </a>
        
                             </li>
@@ -90,7 +98,7 @@
                                 <a href="#">
                                     <img src="./imagens/robotica2.jpg">
                                     <h5>Robótica Colaborativa</h5>
-                                    <p>Explore inovações em ro-<br>bótica colaborativa para uma nova era de trabalho com humanos e robôs em harmonia</p>
+                                    <p>Explore inovações em robótica colabora-<br>tiva para uma nova era de trabalho com humanos e robôs em harmonia</p>
                                 </a>
 
                             </li>
@@ -99,7 +107,7 @@
                                 <a href="#">
                                     <img src="./imagens/inteligencia-artificial.jpg">
                                     <h5>Inteligência Artificial</h5>
-                                    <p>Descubra como a inteli-<br>gência artificial impul-<br>siona a inovação e abre portas para um futuro promissor.</p>
+                                    <p>Descubra como a inteligência artificial impulsiona a inovação e abre portas para<br> um futuro promissor.</p>
                                 </a>
                             </li>
 
@@ -107,7 +115,7 @@
                                 <a href="#">
                                     <img src="./imagens/telemedicina.jpg">
                                     <h5>Saúde 4.0</h5>
-                                    <p>Explore as tecnologias que estão transformando a medicina, como tele-<br>medicina, diagnósticos por IA.</p>
+                                    <p>Explore as tecnologias que estão transformando a medicina, como tele-<br>medicina e diagnósticos por IA.</p>
                                 </a>
                             </li>
                         </ul>
@@ -136,7 +144,8 @@
                         <img class="img-tres-colunas" src="./imagens/doutor.jpg">
 
                         <div class="resumo-img-tres-colunas">
-                            <p>Tenha acesso exclusivo à mente<br> brilhante do Dr. Felipe Silva, en- <br>quanto ele desvenda os segredos<Br> da saúde ideal e revela práticas <br>revolucionárias para uma vida<br> equilibrada e feliz
+                            <p class="doutor">
+                                Explore segredos de saúde com o Dr. Felipe Silva. Práticas revolucionárias para uma vi-<br>da equilibrada. Bem-estar físico e mental<br> em destaque. Nutrição, exercícios e geren-<br>ciamento do estresse. Ganhe insights valio-<br>sos do especialista renomado.
                             </p>
                         </div>
 
