--- a/brasil.html
+++ b/brasil.html
@@ -35,7 +35,7 @@
 
         </div> <!--Fechamento topo-->
 
-        <div id="conteudo">
+        <div id="conteudo-duas-colunas">
 
             <div id="primario">
 
@@ -107,7 +107,7 @@
 
             </div> <!--Fechamento primario-->
 
-            <div id="lateral">
+            <div id="lateral-duas-colunas">
  
                 
                 <div class="caixa">
@@ -116,7 +116,7 @@
 
                     <div class="caixa-conteudo">
 
-                        <ul id="navegacao-lateral">
+                        <ul id="navegacao-lateral-duas-colunas">
                             <li><a href="#">José Almeida</a></li>
                             <li><a href="#">Felipe Silva</a></li>
                             <li><a href="#">Renato Rodrigues</a></li>
@@ -138,9 +138,13 @@
 
                     <div class="caixa-conteudo">
 
+                        <form>
+
                         <label for="email">Email</label>
                         <input type="text" name="email" id="email" placeholder="Digite seu E-mail">
-                        <input type="submit" name="email" value="Cadastrar" id="submit">
+                        <input class="submit" value="Cadastrar" type="submit">
+
+                    </form>
 
                     </div>
 
