--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
         </div> <!--Fechamento topo-->
 
-        <div id="conteudo">
+        <div id="conteudo-tres-colunas">
 
-            <div id="primario">
+            <div id="primario-tres-colunas">
 
                 <div class="caixa">
 
@@ -164,34 +164,34 @@
 
                     <div class="caixa-conteudo">
 
-                        <ul id="mundo">
+                        <ul id="mundo" class="noticias-mundo">
                             <li>
                                 <a href="#">
-                                    <img src="./imagens/cidade.jpg">
+                                    <img src="./imagens/sudeste-asiatico.jpg">
                                     <h5>Cultura Exótica</h5>
-                                    <p>Conheça a cultura e paisagens exóticas do Sudeste Asiático em uma viagem verdadeiramente inesquecível.</p>
+                                    <p>Conheça a cultura e paisa-<br>gens exóticas do Sudeste Asiático em uma viagem inesquecível.</p>
                                 </a>
 
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="./imagens/taxi.jpg">
+                                    <img src="./imagens/cataratas-iguacu.webp">
                                     <h5>Natureza em Cores</h5>
-                                    <p>Explore a fauna e flora da América Latina, da Amazônia aos Andes, em uma jornada pelos tesou-<br>ros naturais da região</p>
+                                    <p>Explore a natureza da América Latina, da Ama-<br>zônia aos Andes, em uma jornada emocionante.</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="./imagens/tecnologia.jpg">
+                                    <img src="./imagens/manifestacao.jpg">
                                     <h5>Crise Global</h5>
-                                    <p>Acompanhe as tensões entre nações e os esfor-<br>ços diplomáticos para alcançar soluções diante de uma crise global</p>
+                                    <p>Acompanhe as tensões entre nações e esforços diplomáticos em uma crise global.</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="./imagens/doutor.jpg">
+                                    <img src="./imagens/mudancas-climaticas.jpg">
                                     <h5>Mudança Climática</h5>
-                                    <p>Explore os impactos da mudança climática em todo o mundo e descubra as soluções inovadoras adotadas por governos.</p>
+                                    <p>Descubra os impactos da mudança climática global e soluções inovadoras adotadas por governos.</p>
                                 </a>
                             </li>
                         </ul>
@@ -203,7 +203,7 @@
 
 
             </div>
-            <div id="lateral">
+            <div id="lateral-tres-colunas">
 
                 <div class="caixa">
 
@@ -211,7 +211,7 @@
 
                     <div class="caixa-conteudo">
 
-                        <ul id="navegacao-lateral">
+                        <ul id="navegacao-lateral-tres-colunas">
                             <li><a href="#">José Almeida</a></li>
                             <li><a href="#">Felipe Silva</a></li>
                             <li><a href="#">Renato Rodrigues</a></li>
