--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                         <div class="resumo-img-tres-colunas">
                             <p class="doutor">
-                                Explore segredos de saúde com o Dr. Felipe Silva. Práticas revolucionárias para uma vi-<br>da equilibrada. Bem-estar físico e mental<br> em destaque. Nutrição, exercícios e geren-<br>ciamento do estresse. Ganhe insights valio-<br>sos do especialista renomado.
+                                Explore segredos de saúde com o Dr. Felipe<br> Silva. Práticas revolucionárias para uma vida equilibrada. Bem-estar físico e mental em<br> destaque. Nutrição, exercícios e gerencia-<br>mento do estresse. Ganhe insights valiosos<br> do especialista renomado.
                             </p>
                         </div>
 
