--- a/fotos.html
+++ b/fotos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body id="uma-coluna" class="fotos">
+<body class="fotos">
 
     <div id="principal">
 
@@ -42,7 +42,7 @@
         </div> <!--Fechamento topo-->
 
 
-        <div id="conteudo">
+        <div id="conteudo-uma-coluna">
 
             <div id="primario">
 
@@ -52,7 +52,7 @@
 
                     <div class="caixa-conteudo">
 
-                        <h2>NOVA LEGISLAÇÃO</h2>
+                        <h4>NOVA LEGISLAÇÃO</h4>
 
                         <img class="img-duas-colunas" src="./imagens/taxi.jpg" alt="">
 
